Update GitHub action: correct name of script, check in results

--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -1,4 +1,4 @@
-name: Run Python Script and Notify
+name: Run Python Script and Commit Changes
 
 on:
   push:
@@ -27,4 +27,13 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run script
-      run: python main.py
+      run: python scrapeFixtures.py
+
+    - name: Commit and push if it changed
+      run: |-
+        git config user.name "Automated"
+        git config user.email "actions@users.noreply.github.com"
+        git add -A
+        timestamp=$(date -u)
+        git commit -m "Latest data: ${timestamp}" || exit 0
+        git push
