--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -8,6 +8,9 @@ on:
     - cron: '0 0 * * *'  # Runs every day at midnight UTC
   workflow_dispatch:  # Allows manual triggering from the GitHub UI
 
+permissions:
+  contents: write  # Allows the action to commit changes
+
 jobs:
   run-script:
     runs-on: ubuntu-latest
@@ -37,3 +40,5 @@ jobs:
         timestamp=$(date -u)
         git commit -m "Latest data: ${timestamp}" || exit 0
         git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
