--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -29,8 +29,11 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Run script
+    - name: Run scrape script
       run: python scrapeFixtures.py
+
+    - name: Run aggregation script
+      run: python importAndAnalyse.py
 
     - name: Commit and push if it changed
       run: |-
