Move to secrets

--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -49,8 +49,8 @@ jobs:
     - name: Run script to append CSV to Google Sheets
       run: |
         echo "${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}"  > google_sheets_credentials.json
-        python push_to_sheets.py
+        python push_to_sheets.py 
       env:
-        SHEET_ID: "your_google_sheet_id"
-        SHEET_NAME: "Sheet1"
+        SHEET_ID: "${{ secrets.SHEET_ID }}"
+        SHEET_NAME: "SundayFixtures"
         CSV_FILE: "output.csv"
