Move tpo env vars

--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -49,6 +49,8 @@ jobs:
     - name: Run script to append CSV to Google Sheets
       run: |
         echo "${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}"  > google_sheets_credentials.json
-        python push_to_sheets.py "${{ secrets.SHEET_ID }}" "SundayFixtures"
+        python push_to_sheets.py  
       env:
+        SHEET_NAME: "SundayFixtures"
+        SHEET_ID: "${{ secrets.SHEET_ID }}"
         CSV_FILE: "output.csv"
