--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -53,4 +53,13 @@ jobs:
       env:
         SHEET_NAME: "SundayFixtures"
         SHEET_ID: "${{ secrets.SHEET_ID }}"
-        CSV_FILE: "output.csv"
+        CSV_FILE: "Sunday.csv"
+
+    - name: Run script to append CSV to Google Sheets
+      run: |
+        echo "${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}"  > google_sheets_credentials.json
+        python push_to_sheets.py  
+      env:
+        SHEET_NAME: "SaturdayFixtures"
+        SHEET_ID: "${{ secrets.SHEET_ID }}"
+        CSV_FILE: "Saturday.csv"
