--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 0 * * *'  # Runs every day at midnight UTC
+    - cron: '0 0 1 * *'  # Runs every first of month at midnight UTC
   workflow_dispatch:  # Allows manual triggering from the GitHub UI
 
 permissions:
